# tinyapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  locustfile.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: schema.drawio
.github/workflows/: ci-cd.yml
tests/: test_api.py
